# Adaptive-Local-Translation

./: .gitignore  README.md  audio.py  engine.py  main.py  obs_script.py  pipeline.py  pyproject.toml  web_server.py
docs/plans/: 2026-03-08-codebase-quality-design-analysis-design.md
subtitle_runtime/: __init__.py
subtitle_runtime/adapters/: __init__.py  asr.py  audio_capture.py  obs_script_sink.py  obs_websocket.py  translator.py  vad.py
subtitle_runtime/application/: __init__.py  audio_ingress.py  ports.py  session.py  speech_pipeline.py
subtitle_runtime/domain/: __init__.py  errors.py  events.py
subtitle_runtime/entrypoints/: __init__.py  cli.py  obs_plugin.py
tests/: test_engine.py  test_translator.py  test_web_server.py
tests/runtime/: test_adapters.py  test_audio_ingress.py  test_cli_entrypoint.py  test_errors.py  test_events.py  test_integration_session.py  test_obs_script_bridge.py  test_session.py  test_speech_pipeline.py
web/: app.js  index.html  style.css
